# FleetVision

./: .env.example  .gitignore  AGENTS.md  AI_WORKFLOW_RULES.md  CODEX_PHASE02_PROMPT.md  CODEX_WORKFLOW.md  PATCH_UPDATE_RULES.md  PHASE_GATE_CHECKLIST.md  PROJECT_CONTEXT_BRIEF.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dataset/: README_dataset.md
demo/: README_demo.md
docs/: 00_START_HERE.md  AGENTS.md  CODEX_WORKFLOW.md  PHASE_GUIDE.md  README.md  TOOL_DECISION.md
notebooks/: FleetVision_04_5K_Validation_Error_Analysis_8_4_93.ipynb  phase03_5_auto_review_prelabeller.ipynb
scripts/: build_colab_pilot_package_v2_1.py  cleanup_local_artifacts.ps1  phase00_init_project.py  phase01_build_metadata.py  phase02_build_review_queue.py  phase03_5_merge_auto_suggestions.py  phase03_6_external_asset_scout.py  phase03_validate_review_labels.py  phase04_5_audit_external_dataset_deduplication.py  phase04_5_export_annotation_correction_review.ps1  phase04_5_export_annotation_correction_review.py  phase04_5_export_severity_scope_review_app_workbook.ps1  phase04_5_export_severity_scope_review_app_workbook.py  phase04_5_export_validation_error_human_review.py  phase04_5_export_validation_error_review_app_workbook.py  phase04_5_intake_external_dataset.py  phase04_5_launch_annotation_correction_review_app.ps1  phase04_5_launch_severity_scope_review_app.ps1  phase04_5_launch_validation_error_review_app.ps1  phase04_5_migrate_external_dataset_registry_v2.py  phase04_5_normalize_external_coco_categories.py  phase04_5_prepare_annotation_correction_review.ps1  (+37 more)
(+270 files in other folders)
