[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetvision"
version = "0.1.0"
description = "FleetVision vehicle exterior damage detection pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "opencv-python",
    "pillow",
    "openpyxl==3.1.5",
    "pyyaml",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "streamlit",
    "ultralytics",
    "psycopg2-binary",
    "sqlalchemy",
    "mlflow",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
